--- a/styles.css
+++ b/styles.css
@@ -215,11 +215,6 @@ footer > .logo > img{
 
 }
 
-.footer-content {
-    max-width: 200px !important;
-    width: 100%;
-}
-
 .contact {
     max-width: 200px;
     width: 100%;
@@ -249,6 +244,12 @@ footer > .logo > img{
 .links:hover {
     color: yellow;
     transform: scale(1.1);
+}
+
+.copyright {
+    color: white;
+    font-size: 1.2em;
+    margin-top: 15px;
 }
 
 
@@ -284,7 +285,7 @@ footer > .logo > img{
     }
 }
 
-@media (max-width:300px) {
+@media (max-width:420px) {
     footer > .logo > img{
         margin-top: 10px;
         margin-bottom: 30px;
